// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package tilestream;

import "mojo/geom/bounding_box.proto";
import "mojo/geom/lng_lat.proto";

option go_package = "github.com/ncraft-io/tilestream/go/pkg/tilestream;tilestream";
option java_multiple_files = true;
option java_outer_classname = "TileInfoProto";
option java_package = "io.ncraft.tilestream";

message TileInfo {
    string id = 1;
    string name = 2;
    string type = 3;
    string description = 4;
    string format = 5;
    string version = 6;
    string attribution = 7;
    string scheme = 8;
    int32 min_zoom = 10;
    int32 max_zoom = 11;
    mojo.geom.BoundingBox bounds = 14;
    mojo.geom.LngLat center = 15;
}