// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package tilestream.v1;

import "mojo/core/field_mask.proto";
import "mojo/core/null.proto";
import "mojo/core/ordering.proto";
import "mojo/mojo.proto";
import "tilestream/layer.proto";
import "tilestream/tile.proto";
import "tilestream/tile_info.proto";

option go_package = "github.com/ncraft-io/tilestream/go/pkg/tilestream/v1;tilestream";
option java_multiple_files = true;
option java_outer_classname = "TilestreamProto";
option java_package = "io.ncraft.tilestream.v1";

message CreateTileRequest {
    string layer = 1;
    int32 level = 2;
    int32 x = 3;
    int32 y = 4;
    string format = 5;
}

message BatchCreateTilesRequest {
}

message CreateTilesRequest {
    string layer = 1;
    repeated tilestream.Tile tiles = 2;
}

message GetTileRequest {
    string layer = 1;
    int32 level = 2;
    int32 x = 3;
    int32 y = 4;
    string format = 5;
}

message GetTileInfoRequest {
    string layer = 1;
}

message UpdateTileRequest {
    string layer = 1;
    int32 level = 2;
    int32 x = 3;
    int32 y = 4;
    string format = 5;
    tilestream.Tile tile = 6;
}

message UpdateTileInfoRequest {
    string layer = 1;
    tilestream.TileInfo info = 2;
}

message CreateLayerRequest {
    tilestream.Layer layer = 1;
}

message BatchCreateLayerRequest {
    repeated tilestream.Layer layers = 2;
}

message BatchCreateLayerResponse {
    repeated tilestream.Layer layers = 1;
}

message UpdateLayerRequest {
    string id = 1;
    tilestream.Layer layer = 2;
}

message BatchUpdateLayerRequest {
    repeated tilestream.Layer layers = 2;
}

message DeleteLayerRequest {
    string layer = 1;
}

message GetLayerRequest {
    string layer = 1;
}

message BatchGetLayersRequest {
    repeated string layers = 1;
}

message BatchGetLayersResponse {
    repeated tilestream.Layer layers = 1;
}

message ListLayersRequest {
    string prefix = 1;
    int32 page_size = 2000;
    string page_token = 2001;
    int32 skip = 2002;
    string filter = 2011;
    mojo.core.Ordering order = 2012;
    mojo.core.FieldMask field_mask = 2013;
    bool unique = 2014;
}

message ListLayersResponse {
    repeated tilestream.Layer layers = 1;
    int32 total_count = 2000;
    string next_page_token = 2001;
}

service Tilestream {
    rpc create_tile(CreateTileRequest) returns (tilestream.Tile);
    rpc batch_create_tiles(BatchCreateTilesRequest) returns (mojo.core.Null);
    rpc create_tiles(CreateTilesRequest) returns (mojo.core.Null);
    rpc get_tile(GetTileRequest) returns (tilestream.Tile);
    rpc get_tile_info(GetTileInfoRequest) returns (tilestream.TileInfo);
    rpc update_tile(UpdateTileRequest) returns (mojo.core.Null);
    rpc update_tile_info(UpdateTileInfoRequest) returns (mojo.core.Null);
    rpc create_layer(CreateLayerRequest) returns (tilestream.Layer);
    rpc batch_create_layer(BatchCreateLayerRequest) returns (BatchCreateLayerResponse);
    rpc update_layer(UpdateLayerRequest) returns (mojo.core.Null);
    rpc batch_update_layer(BatchUpdateLayerRequest) returns (mojo.core.Null);
    rpc delete_layer(DeleteLayerRequest) returns (mojo.core.Null);
    rpc get_layer(GetLayerRequest) returns (tilestream.Layer);
    rpc batch_get_layers(BatchGetLayersRequest) returns (BatchGetLayersResponse);
    rpc list_layers(ListLayersRequest) returns (ListLayersResponse);
}